--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,11 @@
 <div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, <%= em("world!") %></p>
+  <h1>Welcome to Banana Slug Flashcards!</h1>
+  <br>
 
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
+  <a href="/sign_up">Sign-up</a><br>
+  <a href="/log_in">Log-in</a><br>
+  <%#if logged_in?%>
+    <a href="/select_deck">Start playing</a><br>
+  <%#end%>
+
 </div>
