--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,7 +1,7 @@
 <h2>Sign up:</h2>
 
 <form action="/users/new" method="post">
-  Choose a username:<input type="text" name="username">
+  Choose a username:<input type="text" name="name">
   Your email:<input type="text" name="email">
   Choose a password:<input type="password" name="password">
   <input type="submit" value="Sign me up!">
