--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h2>Sign up:</h2>
 
 <form action="/users/new" method="post">
@@ -5,4 +7,8 @@
   Your email:<input type="text" name="email">
   Choose a password:<input type="password" name="password">
   <input type="submit" value="Sign me up!">
+
 </form>
+
+
+</div>
