Fix login view to have labels, breaks, and a password field

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -3,8 +3,8 @@
   <h2>Login:</h2>
 
   <form action='/users/login' method='post'>
-      <input type='text' name='name'>
-      <input type='text' name='password'>
+      Name: <input type='text' name='name'><br>
+      Password: <input type='password' name='password'><br>
       <input type='submit' value='Log in!'>
   </form>
 </div>
