No time for commit msg, we're too good for that

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,14 +1,8 @@
-<div class="container">
-
 <h2>Sign up:</h2>
 
 <form action="/users/new" method="post">
-  Choose a username:<input type="text" name="name"><br>
-  Your email:<input type="text" name="email"><br>
-  Choose a password:<input type="password" name="password"><br>
+  Choose a username:<input type="text" name="name">
+  Your email:<input type="text" name="email">
+  Choose a password:<input type="password" name="password">
   <input type="submit" value="Sign me up!">
-
 </form>
-
-
-</div>
