Refactored Views to implement routes correctly and made page look a little nicer Tim and Darren

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -2,9 +2,9 @@
 <div class="container">
   <h2>Login:</h2>
 
-  <form action='/users/login' method='post'>
-      <input type='text' name='name'>
-      <input type='text' name='password'>
+  <form action='/users/login' method='get'>
+      Username: <br><input type='text' name='name'><br><br>
+      Password: <br><input type='text' name='password'><br><br>
       <input type='submit' value='Log in!'>
   </form>
 </div>
