--- a/app/views/select_deck.erb
+++ b/app/views/select_deck.erb
@@ -1,11 +1,5 @@
 <div class="container">
   <h1>Please select a deck to play with</h1>
   <br>
-
-<%# @decks.each do |deck|%>
-<!--   <a href=<%=#"/play/#{@deck.id}"%>> <%=deck.name%> </a><br> -->
-<%#end%>
-
-<a href="/play">HA! I'm the only deck sucker.</a>
-
+  <a href="/cards">HA! I'm the only deck sucker.</a>
 </div>
