--- a/app/views/select_deck.erb
+++ b/app/views/select_deck.erb
@@ -2,6 +2,6 @@
   <h1>Please select a deck to play with</h1>
   <br>
 
-<a href="/question">HA! I'm the only deck sucker.</a>
+  <a href="/cards">HA! I'm the only deck sucker.</a>
 
 </div>
