--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <h2>Login:</h2>
 
-  <form action='/users/login' method='get'>
+  <form action='/users/login' method='post'>
       Username: <br><input type='text' name='name'><br><br>
       Password: <br><input type='text' name='password'><br><br>
 
