--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,6 +1,6 @@
 <h2>Sign up:</h2>
 <div class="container">
-  <form action="/users/new" method="post">
+  <form action="/users" method="post">
     Choose a username:<br><input type="text" name="name"><br><br>
     Your email:<br><input type="text" name="email"><br><br>
     Choose a password:<br><input type="password" name="password"><br><br>
