--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,8 +5,11 @@
   <a href="/users/new">Sign-up</a><br>
   <a href="/users/login">Log-in</a><br>
 
-  <%#if logged_in?%>
+  <% if logged_in?%>
     <a href="/select_deck">Start playing</a><br>
-  <%#end%>
+    <form method="post" action="/users/logout">
+      <button type="submit">Logout</button>
+    </form>
+  <% end%>
 
 </div>
