--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -4,7 +4,7 @@
 
   <form action='/users/login' method='post'>
       Username: <br><input type='text' name='name'><br><br>
-      Password: <br><input type='text' name='password'><br><br>
+      Password: <br><input type='password' name='password'><br><br>
 
       <input type='submit' value='Log in!'>
   </form>
