--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,14 +2,16 @@
   <h1>Welcome to Banana Slug Flashcards!</h1>
   <br>
 
-  <a href="/users/new">Sign-up</a><br>
-  <a href="/users/login">Log-in</a><br>
+
 
   <% if logged_in?%>
     <a href="/select_deck">Start playing</a><br>
     <form method="post" action="/users/logout">
       <button type="submit">Logout</button>
     </form>
+  <% else %>
+    <a href="/users/new">Sign-up</a><br>
+    <a href="/users/login">Log-in</a><br>
   <% end%>
 
 </div>
