--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,9 +1,11 @@
 <h2>Sign up:</h2>
 <div class="container">
   <form action="/users" method="post">
-    Choose a username:<br><input type="text" name="name"><br><br>
-    Your email:<br><input type="text" name="email"><br><br>
-    Choose a password:<br><input type="password" name="password"><br><br>
-    <input type="submit" value="Sign me up!">
+    <div class="form-group">
+      <label>Choose a username:</label><br><input type="text" name="name"><br><br>
+      <label>Your email:</label><br><input type="text" name="email"><br><br>
+      <label>Choose a password:</label><br><input type="password" name="password"><br><br>
+      <input type="submit" value="Sign me up!">
+    </div>
   </form>
 </div>
