--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,7 +7,7 @@
 
   <% if logged_in?%>
     <a href="/select_deck">Start playing</a><br>
-    <form method="post" action="/users/logout">
+    <form class="form-group" method="post" action="/users/logout">
       <button type="submit">Logout</button>
     </form>
   <% end%>
